# StartUp-Copilot

./: .gitignore  AI-Startup-Copilot-Architecture.md  AI-Startup-Copilot-Deployment-Architecture.md  AI-Startup-Copilot-Evaluation-Framework.md  AI-Startup-Copilot-LangGraph-Multi-Agent-Architecture.md  AI-Startup-Copilot-Milestone-Roadmap.md  AI-Startup-Copilot-PRD.md  AI-Startup-Copilot-PostgreSQL-Schema.sql  AI-Startup-Copilot-RAG-Architecture.md  BACKEND_FOLDER_STRUCTURE.md  FRONTEND_ARCHITECTURE.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c72db6f39433_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py
backend/app/api/v1/: auth.py  health.py  ideas.py  organizations.py  projects.py  reports.py  router.py
backend/app/application/: dto.py
backend/app/application/use_cases/: auth_use_cases.py  idea_use_cases.py  organization_use_cases.py  project_use_cases.py  report_use_cases.py
backend/app/core/: config.py  container.py  pagination.py  security.py
backend/app/domain/: __init__.py  entities.py  exceptions.py  repositories.py  services.py  value_objects.py
backend/app/infrastructure/auth/: __init__.py  jwt_service.py  password_service.py
backend/app/infrastructure/db/: models.py  repositories.py  session.py
backend/app/workers/: jobs.py
backend/tests/: conftest.py  test_health.py  test_idea_validation.py
frontend/: .dockerignore  Dockerfile  (+7 more)
(+68 files in other folders)
